# astrotam

./: .gitignore  Makefile  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.mjs
.github/workflows/: deploy.yml
public/: CNAME
src/: content.config.ts  defaults.py  tailwind.css
src/components/: DeepDive.astro  ImageSlider.astro  LinkCard.astro  Pagination.astro  RadioQuestion.astro  RadioQuestionAnswer.astro  RecentPosts.astro  Video.astro
src/content/docs/: index.mdx
src/content/docs/cosmological_conundrums/redshifted_photons/: example.py  redshifted_photons.mdx
src/content/docs/explainers/alcock_paczynski_effect/: alcock_paczynski_effect.mdx
src/content/docs/explainers/redshift_space_distortions/: redshift_space_distortions.mdx  redshifted_photons.mdx  slider.py
src/data/docs/explainers/redshift_space_distortions/: labels.json
