[project]
name = "tam-cosmology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.1",
]

[tool.ruff]
src = ["src"]